# proyecto_con_Rust

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
src/: config.rs  crypto.rs  db.rs  gui.rs  main.rs  ui.rs
