[package]
name = "vecla"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.30", features = ["bundled"] }
eframe = { version = "0.25", features = ["wgpu", "glow"] }
egui = "0.25"
rpassword = "7.2"
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3.9", features = ["winuser", "windef"] } 