[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"
description = "Gestor de contraseñas portable con SQLite"
authors = ["Usuario"]

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
argon2 = "0.5.2"
rand = "0.8.5"
rpassword = "7.2.0"
clap = { version = "4.4.2", features = ["derive"] }
anyhow = "1.0.75"
thiserror = "1.0.48"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
dialoguer = "0.11.0"
colored = "2.0.4"
